Adicionando segundo paragrafo como ana

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <P>Adicionando primeiro paragrafo como murilo</P>
+    <p>Adicionando segundo paragrafo como Adicionando</p>
 </body>
 </html>
