--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Treinamento github</title>
 </head>
 <body>
     <P>Adicionando primeiro paragrafo como murilo</P>
-    <p>Adicionando segundo paragrafo como Adicionando</p>
+    <p>Adicionando segundo paragrafo como ana</p>
 </body>
 </html>
