Adicionando terceiro paragrafo como murilo e dando rebase

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <P>Adicionando primeiro paragrafo como murilo</P>
     <p>Adicionando segundo paragrafo como ana</p>
+    <p>Adicionando terceiro paragrafo como murilo e dando rebase</p>
 </body>
 </html>
