--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <P>Adicionando primeiro paragrafo como murilo</P>
     <p>Adicionando segundo paragrafo como ana</p>
     <p>Adicionando terceiro paragrafo como murilo e dando rebase</p>
+    <p>Adicionando quarto paragrafo como ana</p>
 </body>
 </html>
