Adicionando p para release

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <p>Adicionando segundo paragrafo como ana</p>
     <p>Adicionando terceiro paragrafo como murilo e dando rebase</p>
     <p>Adicionando quarto paragrafo como ana</p>
+    <br>
+    <p>Adicionando paragrafo para criação de release</p>
 </body>
 </html>
